<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zinc</string>
    <string name="hello_world">Hello Zinc!</string>
    <string name="menu_item_new_tab_text">新しいタブ</string>
    <string name="menu_item_temove_tab_text">タブの削除</string>
    <string name="menu_item_tabs_show_text">タブ一覧の表示</string>
	<string name="menu_item_bookmark_add_text">ブックマークの追加</string>
	<string name="menu_item_bookmark_show_text">ブックマークの一覧</string>
	<string name="menu_item_history_show_text">履歴の一覧</string>
	<string name="menu_item_download_text">ダウンロード</string>
	<string name="menu_item_pc_site_browser_text">PCサイトブラウザ</string>
	<string name="menu_item_remove_all_bookmarks_text">全てのブックマークを削除</string>
	<string name="menu_item_remove_all_histories_text">全ての履歴を削除</string>
	<string name="menu_item_remove_all_tabs_text">全てのタブを削除</string>
	<string name="toast_message_history_regist_error">履歴の登録に失敗しました.</string>
	<string name="toast_message_bookmark_already_regist">既にブックマークに登録されています.</string>
	<string name="toast_message_bookmark_regist_success">ブックマークに登録しました.</string>
	<string name="toast_message_bookmark_regist_error">ブックマークの登録に失敗しました.</string>
	<string name="toast_message_download_success">ダウンロードが完了しました.</string>
	<string name="dialog_button_positive_yes">はい</string>
	<string name="dialog_title_confirm_bookmark_remove">ブックマークの削除</string>
	<string name="dialog_message_confirm_bookmark_remove">このアイテムを削除しますか?</string>
	<string name="dialog_title_confirm_all_bookmarks_remove">ブックマークの全削除</string>
	<string name="dialog_message_confirm_all_bookmarks_remove">全てのアイテムを削除しますか?</string>
	<string name="dialog_title_confirm_history_remove">履歴の削除</string>
	<string name="dialog_message_confirm_history_remove">このアイテムを削除しますか?</string>
	<string name="dialog_title_confirm_all_histories_remove">履歴の全削除</string>
	<string name="dialog_message_confirm_all_histories_remove">全てのアイテムを削除しますか?</string>
	<string name="dialog_title_confirm_tab_remove">タブの削除</string>
	<string name="dialog_message_confirm_tab_remove">このアイテムを削除しますか?</string>
	<string name="dialog_title_confirm_all_tabs_remove">タブの全削除</string>
	<string name="dialog_message_confirm_all_tabs_remove">全てのアイテムを削除しますか?</string>
	<string name="textview1_text">MainContent</string>
	<string name="textview_sub_text">SubText</string>
</resources>